<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/process1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="너연 서비스의 원활한 이용을 위한 회원 입력 정보이오니, 정확히 입력해주세요"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="기본 정보"
            android:textSize="30dp"
            android:layout_marginTop="30dp"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:text="아이디"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/id"/>

            <Button
                android:id="@+id/idcheck"
                android:background="#40C4FF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"

                android:padding="0dp"
                android:text="중복확인"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:text="비밀번호"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:id="@+id/pw"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:id="@+id/pw2"/> <!--패스워드 일치 확인-->

            <!--비밀번호 서로 같지 않을 시에 글자 띄워줌-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="불일치"
                android:textColor="#ff0000"
                android:paddingRight="0dp"
                android:visibility="visible"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="61dp"
                android:layout_height="wrap_content"
                android:text="이름"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/name"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="생년월일"/>

            <Button

                android:background="#40C4FF"
                android:id="@+id/edit_birth"
                android:onClick="showDatePickerDialog"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:padding="0dp"
                android:text="선택"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/here" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="핸드폰번호"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8" />

            <Button
                android:id="@+id/checkphone"
                android:background="#40C4FF"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:padding="0dp"
                android:layout_weight="1"
                android:text="인증"/>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="'-'를 제외하고 입력해주세요"
            android:layout_marginBottom="10dp"
            android:paddingRight="0dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                />


            <TextView
                android:id="@+id/textView1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="지역선택"/>

            <Spinner
                android:background="#E1F5FE"
                android:id="@+id/spinner1"
                android:entries="@array/city"
                android:textAlignment="center"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"

                android:prompt="@string/address_prompt">
            </Spinner>



        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="추후 지역별 커뮤니티에 사용됩니다"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="맞춤 정보"
            android:textSize="30dp"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="키"/>

            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="cm"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="몸무게"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/weight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="kg"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewJudgement"
            android:text="최근 판정 병기"
            android:textSize="15dp"/>

        <Spinner
            android:background="#E1F5FE"
            android:id="@+id/spinnerJudgement"
            android:entries="@array/judgement"
            android:textAlignment="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:prompt="@string/judgement_prompt">
        </Spinner>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:id="@+id/textViewNumsurgery"
            android:text="재수술여부"/>


        <Spinner
            android:background="#E1F5FE"
            android:id="@+id/spinnerNumsurgery"
            android:entries="@array/numsurgery"
            android:textAlignment="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:prompt="@string/numsurgery_prompt">
        </Spinner>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/textView2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="수술방법선택"/>

            <Spinner
                android:id="@+id/spinner2"
                android:entries="@array/surgerymethod"
                android:textAlignment="center"
                android:background="#E1F5FE"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:prompt="@string/surgerymethod_prompt">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:text="수술날짜"/>
            <Button

                android:padding="1dp"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="#40C4FF"
                android:id="@+id/surgerydate"
                android:text="수술일"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heresurgerydate" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:text="퇴원날짜"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="40dp"

                android:background="#40C4FF"
                android:padding="1dp"
                android:id="@+id/leavinghospital"
                android:text="퇴원일"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hereleavinghospital" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="결혼유무"
            android:id="@+id/textViewMarital"
            android:textSize="15dp"/>


        <Spinner
            android:background="#E1F5FE"
            android:id="@+id/spinnerMarital"
            android:entries="@array/maritalstatus"
            android:textAlignment="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:prompt="@string/maritalstatus_prompt">
        </Spinner>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewChildren"
            android:text="자녀유무"
            android:textSize="15dp"/>


        <Spinner
            android:background="#E1F5FE"
            android:id="@+id/spinnerChildren"
            android:entries="@array/children"
            android:textAlignment="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"

            android:prompt="@string/children_prompt">
        </Spinner>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="관심프로그램 추가"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="건강" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/healthprogram">

            <RadioButton
                android:id="@+id/diet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="식단"/>

            <RadioButton
                android:id="@+id/exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="운동"/>

            <RadioButton
                android:id="@+id/sleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="수면"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="심리"/>

            <RadioButton
                android:id="@+id/travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="여행"/>

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="미용" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/beautyprogram">

            <RadioButton
                android:id="@+id/innerwear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="속옷"/>

            <RadioButton
                android:id="@+id/hair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="가발"/>

        </RadioGroup>


        <!--padding 있으니 아주 깔끔하게 버튼 만들어지는구만-->
        <Button
            android:id="@+id/register_done"
            android:layout_gravity="center"
            android:background="#40C4FF"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:padding="0dp"
            android:text="가입하기"/>

    </LinearLayout>
</ScrollView>